--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,120 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     background-color: antiquewhite;
     font-family:Arial, Helvetica, sans-serif;
+    padding: 20px;
+}
+
+.prevent-text-select{    
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+/* Header/Blog Title */
+.header {
+    padding: 30px;
+    font-size: 40px;
+    text-align: center;
+    background: white;
+}
+
+/*scrollnav*/
+.scrollnav{
+    background-color: #aaa;
+    overflow: auto;
+    white-space: nowrap;
+    
+}
+.scrollnav a{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+    
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+.scrollnav .navbutton{    
+    cursor:pointer;
+}
+
+.scrollnav .navbutton:hover {
+    background-color: #777;
+}
+
+.scrollnav .currentpage{
+    background-color: #777;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+    float: left;
+    width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Socials */
+.followme a {    
+    display: inline-block;
+}
+
+.socialimglink{
+    width:20px;
+    height:20px;
+}
+a:hover{
+    text-decoration: none;
+}
+
+/* Footer */
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+        width: 100%;
+        padding: 0;
+    }
+    body{
+        background-color: rgb(105, 15, 133);
+    }
 }
