--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body{
     padding: 20px;
 }
 
+.avatar {
+    border-radius: 50%;
+    width:100%;
+    max-width: 200px;
+}
+
 /* posts */
 .post p{
     font-size:medium;
@@ -22,7 +28,7 @@ body{
 /* Header/Blog Title */
 .header {
     padding: 30px;
-    font-size: 40px;
+    font-size: 20px;
     text-align: center;
     background: white;
 }
