--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*General*/
 *{
     box-sizing: border-box;
 }
@@ -8,38 +9,28 @@ body{
     padding: 20px;
 }
 
-/*Right Side*/
-
-.avatar {
-    border-radius: 50%;
-    width:100%;
-    max-width: 200px;
-}
-
-.sideprogress{
-    width:100%;
-    border-collapse: collapse;
-    border-bottom: 1px solid #ddd;
-}
-.sideprogress th{
-    font-weight: bold;
-}
-.sideprogress tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-/* posts */
-.post p{
-    font-size:medium;
-}
-
 .prevent-text-select{    
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
-/* Header/Blog Title */
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+    float: left;
+    width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+}
+
+
+  /* Header/Blog Title */
 .header {
     padding: 30px;
     font-size: 20px;
@@ -51,7 +42,7 @@ body{
 .cardprogressbar{
     background-color: #777;
     height:20px;
-    width:2%;
+    width:0%;
     position: absolute;
     padding: 0px;
 }
@@ -100,39 +91,24 @@ body{
     background-color: #777;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {
-    float: left;
-    width: 75%;
+/*Right Side*/
+
+.avatar {
+    border-radius: 50%;
+    width:100%;
+    max-width: 200px;
 }
 
-/* Right column */
-.rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
+.sideprogress{
+    width:100%;
+    border-collapse: collapse;
+    border-bottom: 1px solid #ddd;
 }
-
-/* Fake image */
-.fakeimg {
-    background-color: #aaa;
-    width: 100%;
-    padding: 20px;
+.sideprogress th{
+    font-weight: bold;
 }
-
-/* Add a card effect for articles */
-.card {
-    background-color: white;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+.sideprogress tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
 
 /* Socials */
@@ -148,6 +124,34 @@ a:hover{
     text-decoration: none;
 }
 
+/*Left Side*/
+
+/* posts */
+.post p{
+    font-size:medium;
+}
+
+.post img{
+    display:block;
+    margin:auto;
+}
+
+
+/* Add a card effect for articles */
+.card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
 /* Footer */
 .footer {
     padding: 20px;
@@ -155,6 +159,91 @@ a:hover{
     background: #ddd;
     margin-top: 20px;
 }
+
+/* Modal */
+.sketchImage, .realcard {
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.sketchImage:hover, .realcard:hover {opacity: 0.7;}
+
+.post h6{
+    text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 800px;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 800px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {  
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+  
+  /* The Close Button */
+.close{
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
@@ -164,5 +253,8 @@ a:hover{
     }
     body{
         /*background-color: rgb(105, 15, 133);*/
+    }
+    .modal-content {
+        width: 100%;
     }
 }
