--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     float: left;
     width: 75%;
     overflow: auto;
-    height: 100vh;   
+    max-height: 100vh;   
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -86,6 +86,7 @@ body{
     text-align: center;
     padding: 14px;
     text-decoration: none;
+    font-size: 16px;
     
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
@@ -298,12 +299,54 @@ a:hover{
     cursor: pointer;
 }
 
+/*ordered list*/
+ol li{
+    padding-bottom: 8px;
+}
+
+/*Magic Tool Tips*/
+/*
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+*/
+
+.toolTip{
+    text-decoration: underline;
+    font-weight: bold;
+    color:rgb(0, 92, 92);
+}
+
+.jumpToTop{
+    font-size: 12px;
+}
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {
         width: 100%;
         padding: 0;
+        height: auto;
     }
     body{
         /*background-color: rgb(105, 15, 133);*/
